@@ -7,6 +7,8 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2017-11-08] RFC4880: added features subpacket for MDC support
+* [2017-11-08] RFC4880: added experimental key type 107 to keep track of x_rvss->QUAL 
 * [2017-10-31] removed DKG tools (now contained in a separated package DKGPG)
 * [2017-10-29] release 1.3.3 of LibTMCG
 * [2017-10-22] DKG-tools: added dkg-keyinfo to show some DSS key parameters
